[project]
name = "sheiva_cloud"
version = "1.0.0"
dependencies = [
	"s3fs==2023.9.2",
	"boto3==1.28.1",
	"pandas",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[tool.black]
line-length = 79
target-version = ['py311']

[tool.isort]
atomic = true
profile = "black"
line_length = 79
skip_gitignore = true
